--- a/src/NTS.ApplicationServices/NTS.ApplicationServices.csproj
+++ b/src/NTS.ApplicationServices/NTS.ApplicationServices.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.0.0" />
+    <PackageReference Include="X.PagedList" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
